# vv-app2-tctc

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/inputs/: requirements.csv  tests.csv  tests_old.csv
data/inputs/legacy/: requirements_old.csv
docs/: CI_BILLING_LOCK.md  INTERNAL_AI_VALIDATION_APP2_TCTC.md  RECRUTEUR_FAQ.md  ROOT_SETUP_DEPENDENCIES.md  architecture.md  before_after.md  demo_scenario.md  demo_walkthrough.md  env_report.json  env_report.md
docs/demo/: README.md  RECRUTEUR_FAQ.md  demo_pitch.md  demo_walkthrough.md
docs/demo/assets/inputs/: tests.csv
docs/demo/assets/outputs_ai/: ai_suggestions.csv  kpi_summary.csv  tctc_report.html  traceability_matrix.csv
docs/demo/assets/outputs_no_ai/: kpi_summary.csv  rapport.html  tctc_report.html  traceability_matrix.csv
src/vv_app2_tctc/: __init__.py  ia_assistant.py  kpi.py  main.py  models.py  report.py  traceability.py  validators.py
templates/TEMPLATES_REF/: README.md
templates/tctc/: report.html  tctc_report.html
tests/: test_env_check.py  test_ia_assistant.py  test_kpi.py  test_main.py  test_models.py  test_report.py  test_traceability.py  test_validators.py
tools/: env_check.py  load_env_secret.ps1
